# gstwebrtcapp

./: .gitignore  Makefile  README.md  RELEASE.md  pyproject.toml
cmd/: publish.sh  run.py
docker/: Dockerfile-cpu  Dockerfile-cuda  README.md  compose.yml  mosquitto.conf
docker/old/: Dockerfile-cpu  Dockerfile-cuda  README.md  compose.yml  mosquitto.conf
examples/: README.md
examples/external_feed_controller/: feed1.yaml  feed2.yaml  run-ec.sh
examples/run_multiple_feeds/: broker.yaml  feeds.yaml  monitors.yaml  run.sh
examples/train_eval_drl/: drl.py
gstwebrtcapp/apps/: app.py  pipelines.py
gstwebrtcapp/apps/ahoyapp/: app.py  connector.py
gstwebrtcapp/apps/sinkapp/: app.py  connector.py
gstwebrtcapp/control/: agent.py
gstwebrtcapp/control/cc/: gcc_agent.py
gstwebrtcapp/control/drl/: env.py  mdp.py
gstwebrtcapp/control/recorder/: agent.py
gstwebrtcapp/control/safety/: agent.py  callbacks.py  monitor.py  switcher.py  thresholder.py
gstwebrtcapp/media/: preset.py
gstwebrtcapp/message/: broker.py  client.py
gstwebrtcapp/run/: builders.py  feed_controller.py  wrappers.py
gstwebrtcapp/utils/: app.py  base.py  gst.py
tools/gstshark-parser/: README.md  parser.py  plotter.py
tools/rtt-checker/: main.go  mqtt.go  mqtt_conf.yaml
tools/webrtc-ui-patches/: README.MD  patch-webpack.sh
wavelab_demo/: README.md  background.sh  feeds_ahoyrtc.yaml  feeds_custom_ui.yaml  local_broker.yaml  monitors.yaml  new_feed.yaml  run-add-new-feed-ahoyrtc.sh  run-add-new-feed-custom-ui.sh  run-ahoyrtc.sh  run-custom-ui.sh
(+2 files in other folders)
